# agentcost

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PUBLISHING.md  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  package.json  pyproject.toml  requirements.txt  setup.sh  simulator-phase2-complete.patch  sitemap.xml  sync_output.txt
.github/: DISCUSSIONS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  plugin_request.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  sync-pricing.yml
acp-client/: __init__.py  client.py  types.py
acp-server/: package.json
acp-server/src/: server.ts
agentcost/: __init__.py  __main__.py  cli.py  community_auth.py  edition.py  license.py
agentcost-cost-limiter/: pyproject.toml
agentcost-my-llm/: README.md  pyproject.toml
agentcost-my-llm/my_llm/: __init__.py  plugin.py
agentcost-s3-archive/: README.md  pyproject.toml
agentcost-s3-archive/s3_archive/: __init__.py  plugin.py
agentcost-slack-alerts/: README.md  pyproject.toml
agentcost-slack-alerts/agentcost-cost-limiter/: README.md  pyproject.toml
agentcost-slack-alerts/agentcost-cost-limiter/cost_limiter/: __init__.py  plugin.py
agentcost-slack-alerts/agentcost-slack-alerts/: pyproject.toml
agentcost-slack-alerts/agentcost-slack-alerts/slack_alerts/: __init__.py  plugin.py
agentcost-slack-alerts/slack_alerts/: __init__.py
agentcost/agent/: benchmark_runner.py  comparison.py
agentcost/analytics/: __init__.py
agentcost/anomaly/: __init__.py
agentcost/api/: server.py
agentcost/auth/: __init__.py  api_key.py  config.py  dependencies.py  jwt_provider.py  middleware.py  models.py  routes.py  saml_provider.py
agentcost/cost/: .sync_meta.json  __init__.py  allocation_service.py  budget_service.py  calculator.py  cost_center_service.py  model_prices.json  model_routes.py  overrides.json  routes.py  sync_upstream.py
agentcost/data/: __init__.py  adapter.py  connection.py  events.py  postgres_adapter.py  sqlite_adapter.py  store.py
agentcost/estimator/: __init__.py
agentcost/events/: __init__.py
agentcost/feedback/: __init__.py  routes.py
agentcost/forecast/: __init__.py
agentcost/gateway/: __init__.py  semantic_cache.py
agentcost/goals/: __init__.py
agentcost/heartbeat/: __init__.py
agentcost/intelligence/: __init__.py  budget_gate.py  complexity_router.py  tier_registry.py  token_analyzer.py
agentcost/mcp/: __init__.py  __main__.py
agentcost/notify/: __init__.py  channel_service.py  dispatcher.py  routes.py  scorecard_service.py
agentcost/optimizer/: __init__.py
agentcost/org/: __init__.py  audit_service.py  invite_service.py  org_service.py  routes.py  team_service.py
agentcost/otel/: __init__.py  collector.py  grafana-dashboard.json  routes.py
agentcost/plugins/: __init__.py  builtins.py  scaffold.py
agentcost/policy/: __init__.py  approval_service.py  engine.py  policy_service.py  routes.py
changelog/: index.html
community/: discord-setup.md  launch-blog-post.md  linkedin-launch-post.md  show-hn-draft.md  twitter-launch-thread.md
concepts/: index.html
contributing/: index.html
dashboard/: index.html
docker/: Dockerfile  Dockerfile.dashboard
docs/: 404.html  changelog.md  concepts.md  contributing.md  getting-started.md  index.html  index.md  sitemap.xml
enterprise/: LICENSE  README.md
examples/: basic_trace.py  estimate_costs.py  forecasting.py  trace_langchain.py  trace_ollama.py  trace_openai.py  trace_proxy.py
getting-started/: index.html
landing/: index.html  sitemap.xml
sample-data/: tasks.jsonl
scripts/: migrate-sqlite-to-postgres.py  run.sh  seed_enterprise_data.py  seed_sample_data.py  start-sso.sh  validate_all_features.py  verify_release.py
search/: search_index.json
ship-package/: APPLY.sh  README.md  simulator.patch
site/: index.html
tests/: conftest.py  test_auth.py  test_calculator.py  test_cost_calculator.py  test_feedback.py  test_gateway_cache.py  test_hints.py  test_mcp_server.py  test_org.py  test_otel_collector.py  test_paperclip_features.py  test_phase2_complete.py  test_phase3_intelligence.py  test_phase4.py  test_phase4_dashboard.py  test_phase5.py  test_phase6.py  test_phase6_hardening.py  test_plugins_phase2.py  test_prompts.py  test_reactions.py  test_semantic_cache.py
vscode-extension/: package.json  tsconfig.json
(+163 files in other folders)
