[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcost-my-llm"
version = "0.1.0"
description = "AgentCost provider plugin: my-llm"
requires-python = ">=3.10"
dependencies = ["agentcost>=0.5.0"]

[project.entry-points."agentcost.plugins"]
my-llm = "my_llm.plugin:MyLlmPlugin"
